@@ -153,10 +153,14 @@ sub compress_pgdata {
         push @excludes, $dir if -l File::Spec->catfile( $self->{ 'data-dir' }, $dir );
     }
 
+    my ($tablespaces, $transforms) = $self->get_tablespaces_and_transforms();
+    push @{ $tablespaces }, basename( $self->{ 'data-dir' } );
+
     $self->tar_and_compress(
         'work_dir' => dirname( $self->{ 'data-dir' } ),
-        'tar_dir'  => [ basename( $self->{ 'data-dir' } ) ],
+        'tar_dir'  => $tablespaces,
         'excludes' => \@excludes,
+        'transform'=> $transforms,
     );
 
     $self->log->time_finish( 'Compressing $PGDATA' ) if $self->verbose;
